--- a/widget/css/main.css
+++ b/widget/css/main.css
@@ -30,3 +30,9 @@
 .remoteSelection {
   background-color: #3f5d38;
 }
+
+.remoteCaret {
+  background-color: #7fb971;
+  width: 1px;
+  z-index: 2;
+}
